added code to view all columns in dataframe

--- a/BIG_SUR_Landslide_Version_of_Detecting_Changes_in_Sentinel_1.ipynb
+++ b/BIG_SUR_Landslide_Version_of_Detecting_Changes_in_Sentinel_1.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "id": "8kdsGkYJXXKc"
    },
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -74,7 +74,7 @@
       "text/html": [
        "<p>To authorize access needed by Earth Engine, open the following\n",
        "        URL in a web browser and follow the instructions:</p>\n",
-       "        <p><a href=https://code.earthengine.google.com/client-auth?scopes=https%3A//www.googleapis.com/auth/earthengine%20https%3A//www.googleapis.com/auth/devstorage.full_control&request_id=CWTPrmU0YubP11uofOkQlcnNodQdMGN1oD4kxNB1XU4&tc=XW9x56eUH-UVpnd_Bl6iZxTlQ-_s7w97IO69RYfGNMA&cc=o_W8fUcAFoX_mElt7_Q9KbQcsQccqpcdlobd9hBQWWI>https://code.earthengine.google.com/client-auth?scopes=https%3A//www.googleapis.com/auth/earthengine%20https%3A//www.googleapis.com/auth/devstorage.full_control&request_id=CWTPrmU0YubP11uofOkQlcnNodQdMGN1oD4kxNB1XU4&tc=XW9x56eUH-UVpnd_Bl6iZxTlQ-_s7w97IO69RYfGNMA&cc=o_W8fUcAFoX_mElt7_Q9KbQcsQccqpcdlobd9hBQWWI</a></p>\n",
+       "        <p><a href=https://code.earthengine.google.com/client-auth?scopes=https%3A//www.googleapis.com/auth/earthengine%20https%3A//www.googleapis.com/auth/devstorage.full_control&request_id=f5Bq1Ec2WA93uDp9F3Sn6kUVqGdXRLYyKLD1Lo_XPiA&tc=f0AdjIYTKdCvidDR-UAsmvwS6_AYTfafuiDuU-xX9Ek&cc=JyxKZwC0zFnhaker-io4ytbDYIcbeBHzk1XqAvO7c8E>https://code.earthengine.google.com/client-auth?scopes=https%3A//www.googleapis.com/auth/earthengine%20https%3A//www.googleapis.com/auth/devstorage.full_control&request_id=f5Bq1Ec2WA93uDp9F3Sn6kUVqGdXRLYyKLD1Lo_XPiA&tc=f0AdjIYTKdCvidDR-UAsmvwS6_AYTfafuiDuU-xX9Ek&cc=JyxKZwC0zFnhaker-io4ytbDYIcbeBHzk1XqAvO7c8E</a></p>\n",
        "        <p>The authorization workflow will generate a code, which you\n",
        "        should paste in the box below</p>\n",
        "        "
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {
     "id": "YmusFZcZHEjE"
    },
@@ -137,7 +137,10 @@
     "import pandas as pd\n",
     "from scipy.stats import norm, gamma, f, chi2\n",
     "import IPython.display as disp\n",
-    "%matplotlib inline"
+    "%matplotlib inline\n",
+    "\n",
+    "# change the global options that Geopandas inherits from\n",
+    "pd.set_option('display.max_columns',None)"
    ]
   },
   {
@@ -151,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "id": "li189P8wmOTS"
    },
@@ -183,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "id": "kEiSY5zdoFPe"
    },
@@ -216,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +434,7 @@
        "9013              Washington        NaN         NaN     False            6  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
