psuedo code for loop through dataframe

--- a/src/df_iteration.ipynb
+++ b/src/df_iteration.ipynb
@@ -279,8 +279,8 @@
     "\n",
     "    return df\n",
     "\n",
-    "landslide_df2 = create_dataframe('landslides.verified.csv')\n",
-    "landslide_df2.head()"
+    "landslide_df = create_dataframe('landslides.verified.csv')\n",
+    "landslide_df.head()"
    ]
   },
   {
@@ -304,16 +304,17 @@
    "source": [
     "def image_search(point, start, stop):\n",
     "    \"\"\"\n",
-    "    Iterates through a pandas DataFrame or csv and searched Google Earth\n",
+    "    Iterates through a pandas DataFrame or csv and searches Google Earth\n",
     "    Engine based on center AOI point, start time, and stop time.\n",
+    "    \n",
+    "    \n",
     "    \"\"\"\n",
     "\n",
-    "    point + some padded boundary\n",
-    "    start = slide.date - some time in days\n",
-    "    stop = start + some time in day2\n",
+    "    # point + some padded boundary\n",
+    "    # start = slide.date - some time in days\n",
+    "    # stop = start + some time in days\n",
     "\n",
-    "    for loop to iterate through dataframe\n",
-    "\n",
+    "    # loop over dataframe to search on each point, start, and stop\n",
     "    \n",
     "        im_coll = (ee.ImageCollection('COPERNICUS/S1_GRD_FLOAT')\n",
     "                .filterBounds(point)\n",
