added psuedo code

--- a/notebooks/df_iteration.ipynb
+++ b/notebooks/df_iteration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
        "      <td>-119.724608</td>\n",
        "      <td>True</td>\n",
        "      <td>64</td>\n",
-       "      <td>-119.72460833333334, 37.69856388888888</td>\n",
+       "      <td>-119.7246083, 37.69856389</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7555</th>\n",
@@ -196,7 +196,7 @@
        "      <td>-123.797464</td>\n",
        "      <td>True</td>\n",
        "      <td>66</td>\n",
-       "      <td>-123.79746388888888, 39.69405555555555</td>\n",
+       "      <td>-123.7974639, 39.69405556</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -243,16 +243,16 @@
        "7538              California  37.698564 -119.724608      True           64   \n",
        "7555              California  39.694056 -123.797464      True           66   \n",
        "\n",
-       "                                           point  \n",
-       "slide.id                                          \n",
-       "7392                          -118.8962, 34.8813  \n",
-       "7534                           -82.3216, 35.2207  \n",
-       "7536                           -123.5684, 43.433  \n",
-       "7538      -119.72460833333334, 37.69856388888888  \n",
-       "7555      -123.79746388888888, 39.69405555555555  "
+       "                              point  \n",
+       "slide.id                             \n",
+       "7392             -118.8962, 34.8813  \n",
+       "7534              -82.3216, 35.2207  \n",
+       "7536              -123.5684, 43.433  \n",
+       "7538      -119.7246083, 37.69856389  \n",
+       "7555      -123.7974639, 39.69405556  "
       ]
      },
-     "execution_count": 54,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,36 +302,83 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def image_search(point, start, stop):\n",
+    "#convert df to geopandas dataframe\n",
+    "#parse dates, specify datetime object by column on import\n",
+    "\n",
+    "#function runs on a row, use dataframe.apply(axis=row is 1, col is 2) **No for loop needed\n",
+    "#add start and stop column\n",
+    "#time.delta()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def image_search(geodataframe, start, stop):\n",
     "    \"\"\"\n",
-    "    Iterates through a pandas DataFrame or csv and searches Google Earth\n",
-    "    Engine based on center AOI point, start time, and stop time.\n",
+    "    Iterates through a pandas DataFrame to identify specific parameters of\n",
+    "    center AOI point, start time, and stop time.\n",
     "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    data_file : dataframe\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    dataframe\n",
     "    \n",
     "    \"\"\"\n",
     "\n",
-    "    # point + some padded boundary\n",
+    "    # df_series: 'point' + df_series: 'location_accuracy' in all directions\n",
     "    # start = slide.date - some time in days\n",
     "    # stop = start + some time in days\n",
     "\n",
     "    # loop over dataframe to search on each point, start, and stop\n",
-    "    \n",
-    "        im_coll = (ee.ImageCollection('COPERNICUS/S1_GRD_FLOAT')\n",
-    "                .filterBounds(point)\n",
-    "                .filterDate(ee.Date('start'), ee.Date('stop'))\n",
-    "                .filter(ee.Filter.eq('orbitProperties_pass', 'DESCENDING'))\n",
-    "                .filter(ee.Filter.listContains('transmitterReceiverPolarisation',\n",
-    "                                                'VV'))\n",
-    "                .filter(ee.Filter.listContains('transmitterReceiverPolarisation',\n",
-    "                                                'VH'))\n",
-    "                .map(lambda img: img.set('date',\n",
-    "                                                ee.Date(img.date()).format('YYYYMMdd')))\n",
-    "                .sort('date'))\n",
     "\n",
-    "        timestamplist = (im_coll.aggregate_array('date')\n",
-    "                        .map(lambda d: ee.String('T').cat(ee.String(d)))\n",
-    "                        .getInfo())\n",
-    "    return timestamplist"
+    "\n",
+    "\n",
+    "    return point, start, stop\n",
+    "    \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#iterate over each row\n",
+    "#https://stackoverflow.com/questions/58455054/python-pandas-apply-function-using-column-names-as-named-arguments"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Data search in Google Earth Engine\n",
+    "\n",
+    "for point, start, stop in _________:\n",
+    "    im_coll = (ee.ImageCollection('COPERNICUS/S1_GRD_FLOAT')\n",
+    "                    .filterBounds(point)\n",
+    "                    .filterDate(ee.Date('start'), ee.Date('stop'))\n",
+    "                    .filter(ee.Filter.eq('orbitProperties_pass', 'DESCENDING'))\n",
+    "                    .filter(ee.Filter.listContains('transmitterReceiverPolarisation',\n",
+    "                                                    'VV'))\n",
+    "                    .filter(ee.Filter.listContains('transmitterReceiverPolarisation',\n",
+    "                                                    'VH'))\n",
+    "                    .map(lambda img: img.set('date',\n",
+    "                                                    ee.Date(img.date()).format('YYYYMMdd')))\n",
+    "                    .sort('date'))\n",
+    "\n",
+    "            timestamplist = (im_coll.aggregate_array('date')\n",
+    "                            .map(lambda d: ee.String('T').cat(ee.String(d)))\n",
+    "                            .getInfo())\n",
+    "        return timestamplist"
    ]
   },
   {
