modified psuedo code

--- a/notebooks/df_iteration.ipynb
+++ b/notebooks/df_iteration.ipynb
@@ -365,6 +365,7 @@
     "for point, start, stop in _________:\n",
     "    im_coll = (ee.ImageCollection('COPERNICUS/S1_GRD_FLOAT')\n",
     "                    .filterBounds(point)\n",
+    "                    .filter(ee.Geometry.Point.buffer({'distance': 100}))\n",
     "                    .filterDate(ee.Date('start'), ee.Date('stop'))\n",
     "                    .filter(ee.Filter.eq('orbitProperties_pass', 'DESCENDING'))\n",
     "                    .filter(ee.Filter.listContains('transmitterReceiverPolarisation',\n",
