removed html file

--- a/BIG_SUR_Landslide_Version_of_Detecting_Changes_in_Sentinel_1.ipynb
+++ b/BIG_SUR_Landslide_Version_of_Detecting_Changes_in_Sentinel_1.ipynb
@@ -2089,7 +2089,7 @@
    "hash": "1423e7b4365b206593c4d9da781b428c62c61d48349bf4fefaba2ec8f85e2569"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.12 ('earth-analytics')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
