cleaned up nb, made new imports, test new function

--- a/notebooks/df_iteration.ipynb
+++ b/notebooks/df_iteration.ipynb
@@ -135,11 +135,11 @@
     "    # Add new column to geopandas DataFrame for avaiable data\n",
     "    for value in timestamplist:\n",
     "        if value == True:\n",
-    "            result.append(timestamplist)\n",
+    "            results.append(timestamplist)\n",
     "        else:\n",
-    "            result.append('No imagery available')\n",
+    "            results.append('No imagery available')\n",
     "\n",
-    "    return geodataframe"
+    "    return gdf"
    ]
   },
   {
@@ -183,7 +183,6 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +219,6 @@
        "      <th>is.exact</th>\n",
        "      <th>slide.index</th>\n",
        "      <th>geometry</th>\n",
-
        "    </tr>\n",
        "    <tr>\n",
        "      <th>slide.id</th>\n",
@@ -237,7 +235,6 @@
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
-
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -256,7 +253,6 @@
        "      <td>TRUE</td>\n",
        "      <td>54</td>\n",
        "      <td>POINT (-121.43238 35.86563)</td>\n",
-
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9806</th>\n",
@@ -308,7 +304,6 @@
    "source": [
     "landslide_gdf = create_dataframe('landslides.verified.copy.csv')\n",
     "landslide_gdf.head()"
-
    ]
   },
   {
