--- a/notebooks/df_iteration.ipynb
+++ b/notebooks/df_iteration.ipynb
@@ -147,11 +147,11 @@
     "    # Add new column to geopandas DataFrame for avaiable data\n",
     "    for value in timestamplist:\n",
     "        if value == True:\n",
-    "            results.append(timestamplist)\n",
+    "            result.append(timestamplist)\n",
     "        else:\n",
-    "            results.append('No imagery available')\n",
+    "            result.append('No imagery available')\n",
     "\n",
-    "    return gdf"
+    "    return geodataframe"
    ]
   },
   {
