final first draft blog post

--- a/Blog_Post_Landslide_Detect_Thompson_Manak.ipynb
+++ b/Blog_Post_Landslide_Detect_Thompson_Manak.ipynb
@@ -5,7 +5,7 @@
    "id": "be025300",
    "metadata": {},
    "source": [
-    "# Integrating Synthetic Aperature Radar Imagery in Landslide Detection"
+    "# <center>Integrating Synthetic Aperature Radar Imagery in Landslide Detection</center>"
    ]
   },
   {
@@ -22,8 +22,9 @@
    "id": "73207d7f",
    "metadata": {},
    "source": [
-    "## Are Landslides Bringing You Down?\n",
-    "Severe precipitation events and wildland fires are major drivers of landslides, and they are expected to become more prevalent and severe with a changing climate [1]. Landslides continue to be a risk for many populations due to the rapid destruction that they yield to infrastructure and surrounding environments. There is currently a push to improve landslide visibility on a large spatial scale to better assess verified landslide sites and to also improve early warning systems that can help alleviate the potential destruction in areas of high risk [2]. Collecting landslide data on a large spatial scale is tedious and can also render incomplete due to a bias toward collecting data near populated areas [3]. Synthetic Aperture Radar is a useful tool for detecting and quantifying change on Earth's surface. In recent years, SAR imagery has made great advances in the understanding of land surface change due to its accessibility and applicability to many image processing techniques like machine learning, and there are some great pushes to incorporate it in landslide detection methodologies. For our investigation, we worked with SAR imagery from Sentinel-1 and Google Earth Engine to evaluate their effectiveness in mapping surface damage caused by landslides in reported locations."
+    "## <center>Are Landslides Bringing You Down?</center>\n",
+    "\n",
+    "   Severe precipitation events and wildland fires are major drivers of landslides, and they are expected to become more prevalent and severe with a changing climate [1]. Landslides continue to be a risk for many populations due to the rapid destruction that they yield to infrastructure and surrounding environments. There is currently a push to improve landslide visibility on a large spatial scale to better assess verified landslide sites and to also improve early warning systems that can help alleviate the potential destruction in areas of high risk [2]. Collecting landslide data on a large spatial scale is tedious and can also be rendered incomplete due to a bias toward collecting data near populated areas [3]. Synthetic Aperture Radar is a useful tool for detecting and quantifying change on Earth's surface. In recent years, SAR imagery has made great advances in the understanding of land surface change due to its accessibility and applicability to many image processing techniques like machine learning, and there are some great pushes to incorporate it in landslide detection methodologies. For our investigation, we worked with SAR imagery from Sentinel-1 and Google Earth Engine to evaluate their effectiveness in mapping surface damage caused by landslides in reported locations."
    ]
   },
   {
@@ -31,8 +32,8 @@
    "id": "694adcc8",
    "metadata": {},
    "source": [
-    "## Project Goals\n",
-    "This project is built upon a previously developed low-accuracy large spatial scale landslide database provided by the Earth Lab at the University of Colorado Boulder. This database helped serve as a reference for analyzing the accuracy of SAR imagery to detect multi-temporal changes in the Earth's surface due to landslides. The verified landslide database was used for location markers that were referenced when collecting SAR images. The verified locations are depicted in the map below. SAR images were processed and tested for indicators of change that occured around the time of the landslide. For each landslide, we aimed to create an algorithm that can collect a series of satellite images, process through the images to indicate where and when the land-change occurred by analyzing the pixels in each image, and then produce an interactive map that shows an accurate depiction of the changes that occurred."
+    "## <center>Project Goals</center>\n",
+    "   This project is built upon a previously developed low-accuracy large spatial scale landslide database provided by the Earth Lab at the University of Colorado Boulder. This database helped serve as a reference for analyzing the accuracy of SAR imagery to detect multi-temporal changes in the Earth's surface due to landslides. The verified landslide database was used for location markers that were referenced when collecting SAR images. The verified locations are depicted in the map below. SAR images were processed and statistically tested for indicators of change that occured around the time of the landslide. For each landslide, we aimed to create an algorithm that can collect a series of satellite images, process through the images to indicate where and when the land-change occurred by analyzing the pixels in each image, and then produce an interactive map that shows an accurate depiction of the changes that occurred."
    ]
   },
   {
@@ -45,7 +46,7 @@
    "id": "4544cf09",
    "metadata": {},
    "source": [
-    "### Area of Interest Map: Verified North American Landslides \n",
+    "### <center>Area of Interest Map: Verified North American Landslides</center>\n",
     "![AOI.png](attachment:AOI.png)"
    ]
   },
@@ -54,8 +55,8 @@
    "id": "77f93fc2",
    "metadata": {},
    "source": [
-    "## Preliminary Findings\n",
-    "Our initial analysis of leveraging the verified landslide database as a reference for detecting landslides with SAR imagery has proven to be worthwhile. We initially tested two locations: one landslide that occured in Big Sur California in 2017, and another in Wyoming in 2017. These two landslides were fairly large and gave us a decent amount of land surface to work with. The Big Sur landslide in the photo below is our first successful attempt at finding and depicting change due to landslide activity. The red and blue colors are where change in land-surface occurred."
+    "## <center>Preliminary Findings</center>\n",
+    "Our initial analysis of leveraging the verified landslide database as a reference for detecting landslides with SAR imagery has proven to be worthwhile. We initially tested two locations: one landslide that occured in Big Sur California in 2017, and another in Wyoming in 2017. These two landslides were fairly large and gave us a decent amount of land surface to work with. The Big Sur landslide in the photo below is our first successful attempt at finding and depicting change due to landslide activity. The red and blue colors on the mainland are where change in land-surface occurred, and the rest of the color noise in the water are statistical false positives. These changes in surface reflectance are due to wave motion in the ocean. "
    ]
   },
   {
@@ -68,7 +69,7 @@
    "id": "d5b781e4",
    "metadata": {},
    "source": [
-    "### SAR Imagery Change Detection Map: Big Sur California Landslide\n",
+    "###  <center>SAR Imagery Change Detection Map: Big Sur California Landslide</center>\n",
     "![Screen%20Shot%202022-06-21%20at%202.31.00%20PM.png](attachment:Screen%20Shot%202022-06-21%20at%202.31.00%20PM.png)\n"
    ]
   },
@@ -77,7 +78,7 @@
    "id": "dd81dc40",
    "metadata": {},
    "source": [
-    "## Discussion \n",
+    "##  <center>Discussion</center>\n",
     "We hope that this preliminary analysis can help provide insights on how landslide detection can be made more efficient with the use of SAR imagery and Google Earth Engine. Open sourced resources such as these are crucial in the advancement of earth observation science, and we are excited to see our findings suggest that landslide detection is possible with SAR. There is a future with machine learning and rapid detection, and these can aid in the alleviation of economic and ecological stresses that landslides yield. "
    ]
   },
@@ -86,19 +87,11 @@
    "id": "999778b9",
    "metadata": {},
    "source": [
-    "### Source Material:\n",
-    " Link to GitHub: https://github.com/mthomp89/landslide-detect"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7fd389b5",
-   "metadata": {},
-   "source": [
-    "### References:\n",
+    "##  <center>Source Material and References</center>\n",
+    "[Link To our GitHub Repository](https://github.com/mthomp89/landslide-detect)\n",
     "- [1]: Field, C.B.; Barros, V.; Stocker, T.F.; Dahe, Q. Managing the Risks of Extreme Events and Disasters to Advance Climate Change Adaptation: Special Report of the Intergovernmental Panel on Climate Change; Cambridge University Press: Cambridge, UK, 2012.\n",
     "- [2]: Lindsay, E.; Frauenfelder, R.; Rüther, D.; Nava, L.; Rubensdotter, L.; Strout, J.; Nordal, S. Multi-Temporal Satellite Image Composites in Google Earth Engine for Improved Landslide Visibility: A Case Study of a Glacial Landscape. Remote Sens. 2022, 14, 2301.\n",
-    "- [3]: Kirschbaum, D.B.; Adler, R.; Hong, Y.; Hill, S.; Lerner-Lam, A. A global landslide catalog for hazard applications: Method, results, and limitations. Nat. Hazards 2010, 52, 561–575"
+    "- [3]: Kirschbaum, D.B.; Adler, R.; Hong, Y.; Hill, S.; Lerner-Lam, A. A global landslide catalog for hazard applications: Method, results, and limitations. Nat. Hazards 2010, 52, 561–575\n"
    ]
   }
  ],
