updated notebook and cleaned up stats

--- a/notebooks/df_iteration.ipynb
+++ b/notebooks/df_iteration.ipynb
@@ -10,7 +10,7 @@
       "text/html": [
        "<p>To authorize access needed by Earth Engine, open the following\n",
        "        URL in a web browser and follow the instructions:</p>\n",
-       "        <p><a href=https://code.earthengine.google.com/client-auth?scopes=https%3A//www.googleapis.com/auth/earthengine%20https%3A//www.googleapis.com/auth/devstorage.full_control&request_id=Xra4p50pLpfT30wsjt-Rad7GSYoLdH0Df6ulgByACUY&tc=adWZqpnHklvoj8L-ad-JdBe9LF7HqnuUkF7Uj7z4ULQ&cc=-2C8UMVEhypyBD_UYpuCj9oXF5JtEVYtvFoS4oJ1W4I>https://code.earthengine.google.com/client-auth?scopes=https%3A//www.googleapis.com/auth/earthengine%20https%3A//www.googleapis.com/auth/devstorage.full_control&request_id=Xra4p50pLpfT30wsjt-Rad7GSYoLdH0Df6ulgByACUY&tc=adWZqpnHklvoj8L-ad-JdBe9LF7HqnuUkF7Uj7z4ULQ&cc=-2C8UMVEhypyBD_UYpuCj9oXF5JtEVYtvFoS4oJ1W4I</a></p>\n",
+       "        <p><a href=https://code.earthengine.google.com/client-auth?scopes=https%3A//www.googleapis.com/auth/earthengine%20https%3A//www.googleapis.com/auth/devstorage.full_control&request_id=1ShJUvDppxDljA9qXqR7vwxDfFBfSA0TbcdWbqnXnTA&tc=wCKOwkO6Am4ztSCGXGcym7tb7PM3STC7jU0z7pxriBg&cc=GS8tlwYb9G3mKMgmcetbTqg6m6wxBZ-3VGPTlvwyJWo>https://code.earthengine.google.com/client-auth?scopes=https%3A//www.googleapis.com/auth/earthengine%20https%3A//www.googleapis.com/auth/devstorage.full_control&request_id=1ShJUvDppxDljA9qXqR7vwxDfFBfSA0TbcdWbqnXnTA&tc=wCKOwkO6Am4ztSCGXGcym7tb7PM3STC7jU0z7pxriBg&cc=GS8tlwYb9G3mKMgmcetbTqg6m6wxBZ-3VGPTlvwyJWo</a></p>\n",
        "        <p>The authorization workflow will generate a code, which you\n",
        "        should paste in the box below</p>\n",
        "        "
@@ -26,7 +26,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter verification code: 4/1AX4XfWgvIBTXjWHHhNsI1tUGKdQxnDZ_36vmfYOtGZ8YgeHZXkjlEoSDuLQ\n",
+      "Enter verification code: 4/1AX4XfWhirb3zsx7fBcoQDCM4c56KfnQuIXvSOJd9dDsXk6k450JuuVfNA6Y\n",
       "\n",
       "Successfully saved authorization token.\n"
      ]
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 13,
    "metadata": {
     "scrolled": false
    },
@@ -122,6 +122,8 @@
        "      <th>type</th>\n",
        "      <th>trigger</th>\n",
        "      <th>size</th>\n",
+       "      <th>lon</th>\n",
+       "      <th>lat</th>\n",
        "      <th>location_accuracy</th>\n",
        "      <th>event_title</th>\n",
        "      <th>admin_division_name</th>\n",
@@ -146,6 +148,8 @@
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -156,6 +160,8 @@
        "      <td>landslide</td>\n",
        "      <td>rain</td>\n",
        "      <td>medium</td>\n",
+       "      <td>-90.999234</td>\n",
+       "      <td>42.721873</td>\n",
        "      <td>5km</td>\n",
        "      <td>Cassville rock slide</td>\n",
        "      <td>NA</td>\n",
@@ -172,6 +178,8 @@
        "      <td>mudslide</td>\n",
        "      <td>rain</td>\n",
        "      <td>medium</td>\n",
+       "      <td>-75.325703</td>\n",
+       "      <td>40.070575</td>\n",
        "      <td>1km</td>\n",
        "      <td>Balligomingo Road Mudslide</td>\n",
        "      <td>NA</td>\n",
@@ -188,6 +196,8 @@
        "      <td>mudslide</td>\n",
        "      <td>rain</td>\n",
        "      <td>medium</td>\n",
+       "      <td>-112.911742</td>\n",
+       "      <td>51.575712</td>\n",
        "      <td>1km</td>\n",
        "      <td>Mudslide closes Highway 837</td>\n",
        "      <td>NA</td>\n",
@@ -204,6 +214,8 @@
        "      <td>rock_fall</td>\n",
        "      <td>rain</td>\n",
        "      <td>medium</td>\n",
+       "      <td>-121.328879</td>\n",
+       "      <td>35.779001</td>\n",
        "      <td>1km</td>\n",
        "      <td>Multiple Rockslides along Highway 1 near Ragge...</td>\n",
        "      <td>NA</td>\n",
@@ -220,6 +232,8 @@
        "      <td>mudslide</td>\n",
        "      <td>rain</td>\n",
        "      <td>medium</td>\n",
+       "      <td>-121.531978</td>\n",
+       "      <td>36.018678</td>\n",
        "      <td>5km</td>\n",
        "      <td>New Camaldoli Hermitage Monks Trapped by Mudsl...</td>\n",
        "      <td>NA</td>\n",
@@ -242,13 +256,13 @@
        "10120     2017-01-06  Multiple Rockslides along Highway 1 near Ragge...   \n",
        "10121     2017-03-05  New Camaldoli Hermitage Monks Trapped by Mudsl...   \n",
        "\n",
-       "               type trigger    size location_accuracy  \\\n",
-       "slide.id                                                \n",
-       "10032     landslide    rain  medium               5km   \n",
-       "10034      mudslide    rain  medium               1km   \n",
-       "10063      mudslide    rain  medium               1km   \n",
-       "10120     rock_fall    rain  medium               1km   \n",
-       "10121      mudslide    rain  medium               5km   \n",
+       "               type trigger    size         lon        lat location_accuracy  \\\n",
+       "slide.id                                                                       \n",
+       "10032     landslide    rain  medium  -90.999234  42.721873               5km   \n",
+       "10034      mudslide    rain  medium  -75.325703  40.070575               1km   \n",
+       "10063      mudslide    rain  medium -112.911742  51.575712               1km   \n",
+       "10120     rock_fall    rain  medium -121.328879  35.779001               1km   \n",
+       "10121      mudslide    rain  medium -121.531978  36.018678               5km   \n",
        "\n",
        "                                                event_title  \\\n",
        "slide.id                                                      \n",
@@ -275,7 +289,7 @@
        "10121        TRUE         162  POINT (-121.53198 36.01868)  "
       ]
      },
-     "execution_count": 81,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +320,7 @@
     "    # Convert reported geocoordinates to geometery\n",
     "    gdf[['lon', 'lat']] = gdf[['lon', 'lat']].astype(float)\n",
     "    geometry = [Point(xy) for xy in zip(gdf.lon, gdf.lat)]\n",
-    "    gdf = gdf.drop(['lon', 'lat'], axis=1)\n",
+    "#     gdf = gdf.drop(['lon', 'lat'], axis=1)\n",
     "    gdf = GeoDataFrame(gdf, crs=\"EPSG:4326\", geometry=geometry)\n",
     "\n",
     "    return gdf\n",
@@ -316,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -425,8 +439,8 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mEEException\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/vm/pq3w52910cd2h9mmkrzvgqxc0000gn/T/ipykernel_89421/3853429566.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mimage_search\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlandslide_gdf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/var/folders/vm/pq3w52910cd2h9mmkrzvgqxc0000gn/T/ipykernel_89421/3828539308.py\u001b[0m in \u001b[0;36mimage_search\u001b[0;34m(gdf)\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 23\u001b[0;31m     \u001b[0mBASE_DATE\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mee\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlandslide_gdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'slide.date'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     24\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m     \u001b[0;31m# Data search in Google Earth Engine\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/var/folders/vm/pq3w52910cd2h9mmkrzvgqxc0000gn/T/ipykernel_92273/3853429566.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mimage_search\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlandslide_gdf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/var/folders/vm/pq3w52910cd2h9mmkrzvgqxc0000gn/T/ipykernel_92273/3828539308.py\u001b[0m in \u001b[0;36mimage_search\u001b[0;34m(gdf)\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 23\u001b[0;31m     \u001b[0mBASE_DATE\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mee\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlandslide_gdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'slide.date'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     24\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m     \u001b[0;31m# Data search in Google Earth Engine\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/opt/miniconda3/envs/earth-analytics-python/lib/python3.8/site-packages/ee/computedobject.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(cls, *args, **kwargs)\u001b[0m\n\u001b[1;32m     30\u001b[0m       \u001b[0;32mreturn\u001b[0m \u001b[0margs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     31\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 32\u001b[0;31m       \u001b[0;32mreturn\u001b[0m \u001b[0mtype\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__call__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcls\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     33\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     34\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/opt/miniconda3/envs/earth-analytics-python/lib/python3.8/site-packages/ee/ee_date.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, date, opt_tz)\u001b[0m\n\u001b[1;32m     66\u001b[0m         \u001b[0margs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m'value'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mdate\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     67\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 68\u001b[0;31m       raise ee_exception.EEException(\n\u001b[0m\u001b[1;32m     69\u001b[0m           'Invalid argument specified for ee.Date(): %s' % date)\n\u001b[1;32m     70\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mEEException\u001b[0m: Invalid argument specified for ee.Date(): slide.id\n10032    2017-07-11\n10034    2016-09-20\n10063    2016-07-02\n10120    2017-01-06\n10121    2017-03-05\n            ...    \n9662     2016-10-21\n9734     2017-05-20\n9806     2017-05-19\n9844     2017-06-19\n9967     2017-07-01\nName: slide.date, Length: 228, dtype: object"
@@ -436,27 +450,6 @@
    "source": [
     "image_search(landslide_gdf)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
