new file for final notebook

--- a/Thompson_Manak_Landslide_Detecting_Changes-Copy1.ipynb
+++ b/Thompson_Manak_Landslide_Detecting_Changes-Copy1.ipynb
@@ -28,7 +28,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# In this Notebook\n",
+    "# In this Notebook:\n",
     " 1. Setup\n",
     " - 1.1 Initialize Google Earth Engine\n",
     " - 1.2 Import Datasets and Python Modules\n",
